--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>TitanOS</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Nexus">
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script type="module">
     import { initErrorSystem } from './assets/js/errors.js';
@@ -15,6 +18,12 @@
     initErrorSystem(appContainer);
     initApp(appContainer);
     initPerformanceMonitor();
+    // Register service worker
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('Service Worker registered', reg))
+        .catch(err => console.error('Service Worker registration failed', err));
+    }
   </script>
 </head>
 <body style="margin:0; background:#000;">
