--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TitanOS</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Nexus">
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script type="module">
     import { initErrorSystem } from './assets/js/errors.js';
     import { initApp } from './assets/js/router.js';
-    import { initPerformanceMonitor } from './assets/js/performance.js';
     const appContainer = document.getElementById('app');
     initErrorSystem(appContainer);
     initApp(appContainer);
-    initPerformanceMonitor();
-    // Register service worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js')
         .then(reg => console.log('Service Worker registered', reg))
@@ -26,7 +22,7 @@
     }
   </script>
 </head>
-<body style="margin:0; background:#000;">
+<body style="margin:0; background:linear-gradient(145deg, #0d0d0d, #1a1a2e);">
   <div id="app"></div>
 </body>
 </html>
